--- a/XamarinDevSummit/XamarinDevSummit/Views/TabIndexPage.xaml
+++ b/XamarinDevSummit/XamarinDevSummit/Views/TabIndexPage.xaml
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:XamarinDevSummit.ViewModels"
              x:Class="XamarinDevSummit.Views.TabIndexPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             x:DataType="vm:TabIndexPageViewModel">
 
     <Grid>
         <Grid.RowDefinitions>
